@@ -3,8 +3,9 @@ package net.abhay.services.impl;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -23,18 +24,15 @@ import net.abhay.repositories.PostRepo;
 import net.abhay.repositories.UserRepo;
 
 @Service
+@RequiredArgsConstructor
 public class PostServiceImpl implements PostService {
 
-	@Autowired
 	private PostRepo postRepo;
 
-	@Autowired
 	private ModelMapper modelMapper;
 
-	@Autowired
 	private UserRepo userRepo;
 
-	@Autowired
 	private CategoryRepo categoryRepo;
 
 	@Override
@@ -60,7 +58,7 @@ public class PostServiceImpl implements PostService {
 	@Override
 	public PostDto updatePost(PostDto postDto, int postId) {
 		Post post = this.postRepo.findById(postId)
-				.orElseThrow(() -> new ResourceNotFoundException("post", "post id", postId));
+				.orElseThrow(() -> new ResourceNotFoundException("post", "POST_ID_FIELD", postId));
 		post.setTitle(postDto.getTitle());
 		post.setContent(postDto.getContent());
 		post.setImageName(postDto.getImageName());
@@ -94,7 +92,7 @@ public class PostServiceImpl implements PostService {
 		Page<Post> pagePost = this.postRepo.findAll(p);
 		List<Post> allPosts = pagePost.getContent();
 		List<PostDto> postDtos = allPosts.stream().map((post) -> this.modelMapper.map(post, PostDto.class))
-				.collect(Collectors.toList());
+				.toList();
 		PostResponse postResponse = new PostResponse();
 		postResponse.setContent(postDtos);
 		postResponse.setPageNumber(pagePost.getNumber());
@@ -112,7 +110,7 @@ public class PostServiceImpl implements PostService {
 				.orElseThrow(() -> new ResourceNotFoundException("Category", "category Id", categoryId));
 		List<Post> posts = this.postRepo.findByCategory(cat);
 		List<PostDto> postDtos = posts.stream().map(post -> this.modelMapper.map(post, PostDto.class))
-				.collect(Collectors.toList());
+				.toList();
 
 		return postDtos;
 	}
@@ -124,7 +122,7 @@ public class PostServiceImpl implements PostService {
 
 		List<Post> posts = this.postRepo.findByUser(user);
 		List<PostDto> postDtos = posts.stream().map(post -> this.modelMapper.map(post, PostDto.class))
-				.collect(Collectors.toList());
+				.toList();
 
 		return postDtos;
 	}
@@ -133,7 +131,7 @@ public class PostServiceImpl implements PostService {
 	public List<PostDto> searchPosts(String keyword) {
 		List<Post> posts = this.postRepo.searchByTitle("%" + keyword + "%");
 		List<PostDto> postDtos = posts.stream().map((post) -> this.modelMapper.map(post, PostDto.class))
-				.collect(Collectors.toList());
+				.toList();
 		return postDtos;
 	}
 
